syntax = "proto3";

import "game_svc.proto";

enum PlayAs {
    WHITE = 0;
    BLACK = 1;
    RANDOM = 2;
}

message InviteLinkIdMsg {
    string inviteLinkId = 1;
}

message CreateInviteLinkRequest {
    string userId = 1;
    GameSettingsMsg gameSettings = 2;
    optional PlayAs playAs = 3;
}

message ConsumeInviteLinkRequest {
    string inviteLinkId = 1;
    string userId = 2;
}

message ConsumeInviteLinkResponse {
    string gameId = 1;
    string inviterId = 2;
}

message InvalidateLinkMessage {
    string userId = 1;
}

service InviteService {
    rpc CreateInviteLink(CreateInviteLinkRequest) returns (InviteLinkIdMsg) {}
    rpc ConsumeInviteLink(ConsumeInviteLinkRequest) returns (ConsumeInviteLinkResponse) {}
    // rpc invalidateInviteLink(InvalidateLinkMessage) returns (InviteSvcEmptyMessage) {}
}
